<resources>
    <string name="app_name">ADMIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name_hint">Enter Event Name</string>
    <string name="event_name">Event Name</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="event_loc_hint">Enter Event Location/Platform</string>
    <string name="event_loc">Event Location/Platform</string>
    <string name="event_date_format_hint">dd/mm/yyyy</string>
    <string name="event_time_format_hint">hh:mm:ss</string>
    <string name="event_image_button">Upload Event Image</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>

</resources>