<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notification_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="19dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                app:cardBackgroundColor="@color/Yellow">

                <TextView
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_horizontal"

                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/send_notifications"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="17sp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eventNameText"
                android:paddingTop="@dimen/_18sdp"
                app:layout_constraintTop_toBottomOf="@+id/notification_bar"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/event_name"

                android:textColor="@color/white"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/inter_medium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventName"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:hint="@string/event_name_hint"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventNameText"
                android:backgroundTint="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eventLocationText"
                app:layout_constraintTop_toBottomOf="@id/eventName"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/event_loc"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/inter_medium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textColor="@color/white"
                android:id="@+id/eventLocation"
                android:hint="@string/event_loc_hint"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventLocationText"
                android:backgroundTint="@color/white"/>

            <EditText
                android:id="@+id/eventDate"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:focusable="false"
                android:inputType="date"
                android:hint="@string/event_date_format_hint"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/calenderImage"
                app:layout_constraintTop_toBottomOf="@+id/eventLocation"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/eventDate"
                android:layout_marginStart="@dimen/_30sdp"
                android:src="@drawable/calender"
                android:clickable="true"
                app:tint="@color/white"/>
            <EditText
                android:id="@+id/eventTime"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:focusable="false"
                android:inputType="time"
                android:hint="@string/event_time_format_hint"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDate" />

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/clockImage"
                app:layout_constraintTop_toBottomOf="@+id/eventDate"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/eventTime"
                android:layout_marginStart="@dimen/_30sdp"
                android:src="@drawable/clock"
                android:clickable="true"
                app:tint="@color/white"
                />
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:src="@drawable/calender"
                android:id="@+id/eventImage"
                app:layout_constraintTop_toBottomOf="@id/eventTime"/>
            <!--add border-->

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageUploadButton"
                app:layout_constraintTop_toTopOf="@id/eventImage"
                app:layout_constraintStart_toEndOf="@id/eventImage"
                app:layout_constraintBottom_toBottomOf="@id/eventImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="19dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/Yellow">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_image_button"
                    android:padding="@dimen/_7sdp"
                    android:fontFamily="@font/inter_medium"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventImage"
                app:layout_constraintEnd_toStartOf="@+id/edit_button"
                app:cardCornerRadius="19dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                app:cardBackgroundColor="@color/Yellow">
                <TextView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:paddingVertical="@dimen/_8sdp"
                    android:fontFamily="@font/inter_medium"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="17sp"

                    android:textColor="#FF1100"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_button"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/eventImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="19dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                app:cardBackgroundColor="@color/Yellow">

                <TextView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_horizontal"

                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="17sp"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="19dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="true"
                app:cardBackgroundColor="#FF0000">

                <TextView
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"

                    android:paddingVertical="@dimen/_6sdp"
                    android:text="@string/delete"

                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:drawableTop="@drawable/ic_baseline_warning_24"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>